--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -7,5 +7,6 @@
 <body>
 Hello!
 <a href="/first/goodbye">Say goodbye</a> or <a href="/exit">Exit</a>
+or <a href="/first/hello?name=Harry&surname=Potter">Request with parameters</a>
 </body>
 </html>
